# bkcrab

./: .dockerignore  .gitattributes  .gitignore  .goreleaser.yaml  Dockerfile  Makefile  all_comments.txt  extract_comments.py  go.mod  go.sum  install.sh
.github/workflows/: docker.yml  release.yml
cmd/bkclaw/: cmd_admin.go  cmd_agents.go  cmd_apikey.go  cmd_daemon.go  cmd_plugin.go  cmd_policy.go  cmd_provider.go  cmd_sandbox.go  cmd_session.go  cmd_skill.go  cmd_version.go  main.go
cmd/bkcrab/: cmd_admin.go  cmd_agents.go  cmd_apikey.go  cmd_daemon.go  cmd_plugin.go  cmd_policy.go  cmd_provider.go  cmd_sandbox.go  cmd_session.go  cmd_skill.go  cmd_version.go  main.go
cmd/fastclaw/: cmd_admin.go  cmd_daemon.go  (+7 more)
docs/: database.md  mcp-gateway.md  multi-instance-steering.md  rag-document-ai.md  skill-self-evolution.md
scripts/: dev-build.sh  docker-entrypoint.sh  release.sh
services/rag-parser/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
services/rag-parser/app/: __init__.py  main.py  office.py  pdf.py  pdf_engine.py  protocol.py
services/rag-parser/docs/: pdf-engine-adr.md
services/rag-parser/tests/: __init__.py  test_multimodal_corpus.py  test_office.py  test_pdf.py  test_protocol.py  test_settings.py
services/rag-parser/tests/fixtures/: __init__.py  expected_minimal.json  expected_multimodal.json  expected_office_golden.json  generate_minimal.py  generate_multimodal.py  generate_office_golden.py  visio-embedded.docx
web/: .gitignore  eslint.config.mjs  next.config.ts  package.json
workspace/: AGENTS.md  SOUL.md  TOOLS.md  USER.md
(+702 files in other folders)
